--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "next": "14.0.1",
+    "next-navigation": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.22.4"
