--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-navigation": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
+    "theme-change": "^2.5.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
