--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^10.16.9",
     "next": "14.0.1",
     "next-navigation": "^1.0.6",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "theme-change": "^2.5.0",
     "zod": "^3.22.4"
   },
@@ -22,7 +26,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "daisyui": "^3.9.4",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
