--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@nextui-org/react": "^2.2.9",
+    "@reduxjs/toolkit": "^2.1.0",
+    "axios": "^1.6.7",
     "framer-motion": "^10.16.9",
     "next": "^14.0.1",
     "next-navigation": "^1.0.6",
@@ -18,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.1.0",
     "theme-change": "^2.5.0",
     "zod": "^3.22.4"
   },
