Admin panel ui created

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgre:Smriti1@localhost:5432/Co-Travel-Nepal?connect_timeout=10&sslmode=require&target_session_attrs=primary"
+# DATABASE_URL="postgresql://postgre:Smriti1@localhost:5432/Co-Travel-Nepal?connect_timeout=10&sslmode=require&target_session_attrs=primary"
