--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "framer-motion": "^10.16.9",
-    "next": "^14.0.1",
+    "next": "^14.1.0",
     "next-navigation": "^1.0.6",
     "next-themes": "^0.2.1",
+    "node": "^21.6.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
