--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "@hookform/resolvers": "^3.3.2",
     "@nextui-org/react": "^2.2.9",
     "@reduxjs/toolkit": "^2.1.0",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.7",
     "framer-motion": "^10.16.9",
+    "js-cookie": "^3.0.5",
     "next": "^14.1.0",
     "next-navigation": "^1.0.6",
     "next-themes": "^0.2.1",
     "node": "^21.6.2",
+    "node-mailjet": "^6.0.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-redux": "^9.1.0",
+    "socket.io-client": "^4.7.5",
     "theme-change": "^2.5.0",
     "zod": "^3.22.4"
   },
