--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
+    "@hookform/resolvers": "^3.3.4",
     "@nextui-org/react": "^2.2.9",
     "@reduxjs/toolkit": "^2.1.0",
     "@types/js-cookie": "^3.0.6",
@@ -23,6 +23,7 @@
     "node-mailjet": "^6.0.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.2",
     "react-icons": "^4.12.0",
     "react-redux": "^9.1.0",
     "socket.io-client": "^4.7.5",
