--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.7",
     "framer-motion": "^10.16.9",
+    "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "next": "^14.1.0",
     "next-navigation": "^1.0.6",
     "next-themes": "^0.2.1",
     "node": "^21.6.2",
     "node-mailjet": "^6.0.5",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
@@ -28,10 +31,12 @@
     "react-redux": "^9.1.0",
     "socket.io-client": "^4.7.5",
     "theme-change": "^2.5.0",
+    "timeago.js": "^4.0.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
