--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^4.0.0",
     "next": "^14.1.0",
     "next-navigation": "^1.0.6",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "node": "^21.6.2",
     "node-mailjet": "^6.0.5",
